add proyecto en eyes

--- a/porfolio/template/eyes/proyectos.html
+++ b/porfolio/template/eyes/proyectos.html
@@ -36,10 +36,10 @@ Mis proyectos
                                     </button>
 
 
-                                    <a href="https://github.com/horacio-a" class="boton-proyectos"
+                                    <a href="https://github.com/horacio-a/Criptoword-front" class="boton-proyectos"
                                         id="boton-CriptoWord4" style="display: none;">github</a>
 
-                                    <a href="https://horaciomalbornoz.com.ar" class="boton-proyectos"
+                                    <a href="http://criptoword.com.ar" class="boton-proyectos"
                                         id="boton-CriptoWord5" style="display: none;">ver en la web</a>
 
                                     <div class="estructurabotones" id="botones-CriptoWord1">
@@ -77,10 +77,10 @@ Mis proyectos
                                     </button>
 
 
-                                    <a href="https://github.com/horacio-a" class="boton-proyectos"
+                                    <a href="https://github.com/horacio-a/Espacio-bonhomia" class="boton-proyectos"
                                         id="boton-e-commerce4" style="display: none;">github</a>
 
-                                    <a href="" class="boton-proyectos" id="boton-e-commerce5" style="display: none;">ver
+                                    <a href="https://espacio-bonhomia.herokuapp.com" class="boton-proyectos" id="boton-e-commerce5" style="display: none;">ver
                                         en la web</a>
 
                                     <div class="estructurabotones" id="botones-e-commerce1">
@@ -143,18 +143,43 @@ Mis proyectos
                     </div>
                     <div class="bloque-tecnologia-unidad ">
                         <div class="view view-tenth center-flex-j center-flex-ai">
-                            <img src="" width="75%" />
+                            <img src='{% static "imagenes/eyes/Logo-chat-priv.png" %}' width="100%" />
                             <div class="mask">
                                 <div class="titulo-mask">
-                                    Proximamente
+                                    Chat Priv
                                 </div>
                                 <div class="conjunto-botones">
-                                    <a href="" class="boton-proyectos">
-                                    </a>
-                                    <a href="" class="boton-proyectos">
-                                    </a>
-                                    <a href="" class="boton-proyectos">
-                                    </a>
+                                    <button type="button" class="boton-proyectos" id="botonchatPriv1"
+                                        onclick="tecnologiaschatPriv()">
+                                        Construida en...
+                                    </button>
+                                    <button class="boton-proyectos" id="botonchatPriv2"
+                                        onclick=" proyectochatPriv()">
+                                        Ver el Proyecto
+                                    </button>
+
+
+                                    
+                                    <a href="" class="boton-proyectos" id="botonchatPriv4"
+                                        style="display: none;">github</a>
+
+                                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5" style="display: none;">ver
+                                        en la web</a>
+
+                                    <div class="estructurabotones" id="BotoneschatPriv1">
+                                        <div class="miniboton-proyectos"> HTML</div>
+                                        <div class="miniboton-proyectos"> CSS</div>
+                                    </div>
+
+                                    <div class="estructurabotones" id="BotoneschatPriv2">
+                                        <div class="miniboton-proyectos">Node.js</div>
+                                        <div class="miniboton-proyectos">Socket.io</div>
+                                    </div>
+
+
+                                    <div class="miniboton-proyectos" id="botonchatPriv3"
+                                        onclick="aparecerchatPriv()" style="display: none;"> Volver</div>
+
                                 </div>
                             </div>
                         </div>
