add proyecto en eyes movil

--- a/porfolio/static/css/index.css
+++ b/porfolio/static/css/index.css
@@ -420,6 +420,11 @@
 
     }
 
+    #icon-Chat {
+        position: relative;
+        transform: translate(-50%);
+    }
+
     .detalles {
         position: relative;
         transform: translate(50%);
