--- a/porfolio/static/css/index.css
+++ b/porfolio/static/css/index.css
@@ -328,7 +328,8 @@
     /* -----------------------------------  inicio main-proyectos -------------------------------------------- */
     .main-proyecto-movil {
         width: 100%;
-        height: 85%;
+        min-height: 85%;
+        height: auto;
     }
     .main-proyecto-pc {
         display: none;
