--- a/porfolio/staticfiles/css/index.css
+++ b/porfolio/staticfiles/css/index.css
@@ -345,7 +345,8 @@
 
     .conteiner-proyectos {
         width: 90%;
-        height: 100vh;
+        min-height: 100%;
+        height: auto;
         background-color: #EEEBDD;
         border-radius: 1vw;
     }
