height proyecto con js

--- a/porfolio/template/eyes/proyectos.html
+++ b/porfolio/template/eyes/proyectos.html
@@ -251,7 +251,7 @@ Mis proyectos
     </div>
 </main>
 <main class="main-proyecto-movil">
-    <div class="conteiner-proyectos">
+    <div class="conteiner-proyectos" id="background-proyectos">
         <div class="titulo-proyecto">
             Mis Proyectos
         </div>
@@ -385,200 +385,7 @@ Mis proyectos
             </div>
             <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
         </div>
-        <div class="bloque-proyecto">
-            <div class="detalles" id="detalle-Chat">
-                <div class="titulo-mask" style=" font-size: 1.5vh ; ">
-                    Chat Priv
-                </div>
-                <div class="conjunto-botones">
-                    <button type="button" class="boton-proyectos" id="botonchatPriv1Movil"
-                        onclick="tecnologiaschatPrivMovil()">
-                        Construida en...
-                    </button>
-                    <button class="boton-proyectos" id="botonchatPriv2Movil" onclick="proyectochatPrivMovil()">
-                        Ver el Proyecto
-                    </button>
-                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos" id="botonchatPriv4Movil"
-                        style="display: none;">github</a>
-                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5Movil"
-                        style="display: none;">ver en la web</a>
-                    <div class="estructurabotones" id="BotoneschatPriv1Movil">
-                        <div class="miniboton-proyectos"> HTML</div>
-                        <div class="miniboton-proyectos"> CSS</div>
-                    </div>
-                    <div class="estructurabotones" id="BotoneschatPriv2Movil">
-                        <div class="miniboton-proyectos"> node.js</div>
-                        <div class="miniboton-proyectos"> Socket.io </div>
-                    </div>
 
-                    <div class="miniboton-proyectos poniter" id="botonchatPriv3Movil"
-                        onclick="aparecerchatPrivMovil()" style="display: none;"> Volver</div>
-                </div>
-            </div>
-            <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
-        </div>
-        <div class="bloque-proyecto">
-            <div class="detalles" id="detalle-criptoword">
-                <div class="titulo-mask">
-                    CriptoWord
-                </div>
-                <div class="conjunto-botones">
-                    <button type="button" class="boton-proyectos" id="boton-CriptoWord1-movil"
-                        onclick="tecnologiasCriptoWordMovil()">
-                        Construida en...
-                    </button>
-                    <button class="boton-proyectos" id="boton-CriptoWord2-movil" onclick="proyectoCriptoWordMovil()">
-                        Ver el Proyecto
-                    </button>
-                    <a href="https://github.com/horacio-a" class="boton-proyectos" id="boton-CriptoWord4-movil"
-                        style="display: none;">github</a>
-                    <a href="https://horaciomalbornoz.com.ar" class="boton-proyectos" id="boton-CriptoWord5-movil"
-                        style="display: none;">ver en la web</a>
-                    <div class="estructurabotones" id="botones-CriptoWord1-movil">
-                        <div class="miniboton-proyectos"> HTML</div>
-                        <div class="miniboton-proyectos"> CSS</div>
-                    </div>
-                    <div class="estructurabotones" id="botones-CriptoWord2-movil">
-                        <div class="miniboton-proyectos"> REACT.JS</div>
-                        <div class="miniboton-proyectos"> NODE.JS</div>
-                    </div>
-
-                    <div class="miniboton-proyectos poniter" id="boton-CriptoWord3-movil"
-                        onclick="aparecerCriptoWordMovil()" style="display: none;"> Volver</div>
-                </div>
-            </div>
-            <img src='{% static "imagenes/eyes/icon S.png" %}' height="100%" id="icons" />
-
-        </div>
-        <div class="bloque-proyecto">
-            <div class="detalles" id="detalle-bonhomia">
-                <div class="titulo-mask" style=" font-size: 1.5vh ; ">
-                    Espacio-Bonhomia
-                </div>
-                <div class="conjunto-botones">
-                    <button type="button" class="boton-proyectos" id="botonEcommerce1Movil"
-                        onclick="tecnologiasEcommerceMovil()">
-                        Construida en...
-                    </button>
-                    <button class="boton-proyectos" id="botonEcommerce2Movil" onclick="proyectoEcommerceMovil()">
-                        Ver el Proyecto
-                    </button>
-                    <a href="https://github.com/horacio-a" class="boton-proyectos" id="botonEcommerce4Movil"
-                        style="display: none;">github</a>
-                    <a href="https://horaciomalbornoz.com.ar" class="boton-proyectos" id="botonEcommerce5Movil"
-                        style="display: none;">ver en la web</a>
-                    <div class="estructurabotones" id="BotonesEcommerce1Movil">
-                        <div class="miniboton-proyectos"> HTML</div>
-                        <div class="miniboton-proyectos"> CSS</div>
-                    </div>
-                    <div class="estructurabotones" id="BotonesEcommerce2Movil">
-                        <div class="miniboton-proyectos"> PYTHON</div>
-                        <div class="miniboton-proyectos"> DJANGO</div>
-                    </div>
-
-                    <div class="miniboton-proyectos poniter" id="botonEcommerce3Movil"
-                        onclick="aparecerEcommerceMovil()" style="display: none;"> Volver</div>
-                </div>
-            </div>
-            <img src='{% static "imagenes/eyes/BonhomiaLogo.png" %}' height="100%" id="icon-bonhomia" />
-        </div>
-        <div class="bloque-proyecto">
-            <div class="detalles" id="detalle-calculadora">
-                <div class="titulo-mask" style=" font-size: 1.5vh ; ">
-                    Calculadora
-                    
-                </div>
-                <div class="conjunto-botones">
-                    <button type="button" class="boton-proyectos" id="botonCalculadora1Movil"
-                        onclick="tecnologiasCalculadoraMovil()">
-                        Construida en...
-                    </button>
-                    <button class="boton-proyectos" id="botonCalculadora2Movil" onclick="proyectoCalculadoraMovil()">
-                        Ver el Proyecto
-                    </button>
-                    <a href="https://github.com/horacio-a" class="boton-proyectos" id="botonCalculadora4Movil"
-                        style="display: none;">github</a>
-                    <a href="https://horaciomalbornoz.com.ar" class="boton-proyectos" id="botonCalculadora5Movil"
-                        style="display: none;">ver en la web</a>
-                    <div class="estructurabotones" id="botonesCalculadora1Movil">
-                        <div class="miniboton-proyectos"> HTML</div>
-                        <div class="miniboton-proyectos"> CSS</div>
-                    </div>
-                    <div class="estructurabotones" id="botonesCalculadora2Movil">
-                        <div class="miniboton-proyectos"> JS</div>
-                        <div class="miniboton-proyectos"> </div>
-                    </div>
-
-                    <div class="miniboton-proyectos poniter" id="botonCalculadora3Movil"
-                        onclick="aparecerCalculadoraMovil()" style="display: none;"> Volver</div>
-                </div>
-            </div>
-            <img src='{% static "imagenes/eyes/Calculadora.png" %}' height="100%" id="icon-calculadora" />
-        </div>
-        <div class="bloque-proyecto">
-            <div class="detalles" id="detalle-Chat">
-                <div class="titulo-mask" style=" font-size: 1.5vh ; ">
-                    Chat Priv
-                </div>
-                <div class="conjunto-botones">
-                    <button type="button" class="boton-proyectos" id="botonchatPriv1Movil"
-                        onclick="tecnologiaschatPrivMovil()">
-                        Construida en...
-                    </button>
-                    <button class="boton-proyectos" id="botonchatPriv2Movil" onclick="proyectochatPrivMovil()">
-                        Ver el Proyecto
-                    </button>
-                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos" id="botonchatPriv4Movil"
-                        style="display: none;">github</a>
-                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5Movil"
-                        style="display: none;">ver en la web</a>
-                    <div class="estructurabotones" id="BotoneschatPriv1Movil">
-                        <div class="miniboton-proyectos"> HTML</div>
-                        <div class="miniboton-proyectos"> CSS</div>
-                    </div>
-                    <div class="estructurabotones" id="BotoneschatPriv2Movil">
-                        <div class="miniboton-proyectos"> node.js</div>
-                        <div class="miniboton-proyectos"> Socket.io </div>
-                    </div>
-
-                    <div class="miniboton-proyectos poniter" id="botonchatPriv3Movil"
-                        onclick="aparecerchatPrivMovil()" style="display: none;"> Volver</div>
-                </div>
-            </div>
-            <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
-        </div>
-        <div class="bloque-proyecto">
-            <div class="detalles" id="detalle-Chat">
-                <div class="titulo-mask" style=" font-size: 1.5vh ; ">
-                    Chat Priv
-                </div>
-                <div class="conjunto-botones">
-                    <button type="button" class="boton-proyectos" id="botonchatPriv1Movil"
-                        onclick="tecnologiaschatPrivMovil()">
-                        Construida en...
-                    </button>
-                    <button class="boton-proyectos" id="botonchatPriv2Movil" onclick="proyectochatPrivMovil()">
-                        Ver el Proyecto
-                    </button>
-                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos" id="botonchatPriv4Movil"
-                        style="display: none;">github</a>
-                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5Movil"
-                        style="display: none;">ver en la web</a>
-                    <div class="estructurabotones" id="BotoneschatPriv1Movil">
-                        <div class="miniboton-proyectos"> HTML</div>
-                        <div class="miniboton-proyectos"> CSS</div>
-                    </div>
-                    <div class="estructurabotones" id="BotoneschatPriv2Movil">
-                        <div class="miniboton-proyectos"> node.js</div>
-                        <div class="miniboton-proyectos"> Socket.io </div>
-                    </div>
-
-                    <div class="miniboton-proyectos poniter" id="botonchatPriv3Movil"
-                        onclick="aparecerchatPrivMovil()" style="display: none;"> Volver</div>
-                </div>
-            </div>
-            <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
-        </div>
     </div>
 
 </main>
