height proyecto con js

--- a/porfolio/template/eyes/proyectos.html
+++ b/porfolio/template/eyes/proyectos.html
@@ -385,6 +385,38 @@ Mis proyectos
             </div>
             <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
         </div>
+        <div class="bloque-proyecto">
+            <div class="detalles" id="detalle-Chat">
+                <div class="titulo-mask" style=" font-size: 1.5vh ; ">
+                    Chat Priv
+                </div>
+                <div class="conjunto-botones">
+                    <button type="button" class="boton-proyectos" id="botonchatPriv1Movil"
+                        onclick="tecnologiaschatPrivMovil()">
+                        Construida en...
+                    </button>
+                    <button class="boton-proyectos" id="botonchatPriv2Movil" onclick="proyectochatPrivMovil()">
+                        Ver el Proyecto
+                    </button>
+                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos" id="botonchatPriv4Movil"
+                        style="display: none;">github</a>
+                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5Movil"
+                        style="display: none;">ver en la web</a>
+                    <div class="estructurabotones" id="BotoneschatPriv1Movil">
+                        <div class="miniboton-proyectos"> HTML</div>
+                        <div class="miniboton-proyectos"> CSS</div>
+                    </div>
+                    <div class="estructurabotones" id="BotoneschatPriv2Movil">
+                        <div class="miniboton-proyectos"> node.js</div>
+                        <div class="miniboton-proyectos"> Socket.io </div>
+                    </div>
+
+                    <div class="miniboton-proyectos poniter" id="botonchatPriv3Movil"
+                        onclick="aparecerchatPrivMovil()" style="display: none;"> Volver</div>
+                </div>
+            </div>
+            <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
+        </div>
 
     </div>
 
