--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -48,8 +48,8 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto">Link a github</a>
-                                    <a class="button-proyecto">Link a la web</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/Criptoword-front">Link a github</a>
+                                    <a class="button-proyecto" href="http://criptoword.com.ar">Link a la web</a>
                                 </div>
                             </div>
                         </div>
@@ -93,8 +93,8 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto">Link a github</a>
-                                    <a class="button-proyecto">Link a la web</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/Espacio-bonhomia">Link a github</a>
+                                    <a class="button-proyecto" href="https://espacio-bonhomia.herokuapp.com">Link a la web</a>
                                 </div>
                             </div>
 
@@ -137,6 +137,52 @@
 
                         </div>
                     </div>
+                    <div class="slider-slide">
+                        <div class="proyecto1">
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto">Chat Priv</div>
+                                <div><img src='{% static "imagenes/space/Logo-chat-priv.png" %}' alt="" width="25%"></div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto"> Construida con</div>
+                                <div class="tecnologias-construccion">
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">HTML</span>
+                                        <span><img class="imagane-icon-habilidades html"
+                                                src='{% static "imagenes/space/ic-html.png" %}' height="1.5vh"></span>
+                                    </div>
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">CSS</span>
+                                        <span><img class="imagane-icon-habilidades css"
+                                                src='{% static "imagenes/space/ic-css.png" %}' height="50%"></span>
+                                    </div>
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">JavaScript</span>
+                                        <span><img class="imagane-icon-habilidades bootstrap"
+                                                src='{% static "imagenes/space/ic-js.png" %}' height="50%"></span>
+                                    </div>
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">Socket.Io</span>
+                                        <span><img class="imagane-icon-habilidades bootstrap"
+                                                src='{% static "imagenes/space/socketio.png" %}' height="50%"></span>
+                                    </div>
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">nODE.JS</span>
+                                        <span><img class="imagane-icon-habilidades nodejs"
+                                                src='{% static "imagenes/space/nodejs.png" %}'></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto">Links</div>
+                                <div class="conteiner-button-proyecto">
+                                    <a class="button-proyecto">Link a github</a>
+                                    <a class="button-proyecto">Link a la web</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
 
                 </div>
                 <div class="slider-btns">
@@ -149,7 +195,7 @@
     </div>
     <div class="main-proyecto-movil">
         <section id="seccion12" class="section">
-            <img class="next-movil button-carrosel" src='{% static "imagenes/space/arriba.png" %}' height="25vh"></img>
+            <img class="prev-movil button-carrosel" src='{% static "imagenes/space/arriba.png" %}' height="25vh"></img>
 
             <div class="slider">
                 <div class="slider-slides">
@@ -182,8 +228,8 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto">Link a github</a>
-                                    <a class="button-proyecto">Link a la web</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/Criptoword-front">Link a github</a>
+                                    <a class="button-proyecto" href="http://criptoword.com.ar">Link a la web</a>
                                 </div>
                             </div>
                         </div>
@@ -217,8 +263,8 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto">Link a github</a>
-                                    <a class="button-proyecto">Link a la web</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/Espacio-bonhomia">Link a github</a>
+                                    <a class="button-proyecto" href="https://espacio-bonhomia.herokuapp.com">Link a la web</a>
                                 </div>
                             </div>
 
@@ -244,17 +290,50 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto">Link a github</a>
-                                    <a class="button-proyecto">Link a la web</a>
+                                    <a class="button-proyecto" href="">Link a github</a>
+                                    <a class="button-proyecto" href="">Link a la web</a>
                                 </div>
                             </div>
 
                         </div>
                     </div>
+                    <div class="slider-slide-movil">
+                        <div class="proyecto1">
+                            <div class="conteiner-main-proyecto" style="margin-top: 1vh;">
+                                <div class="titulo-proyecto">Chat priv</div>
+                                <div><img src='{% static "imagenes/space/Logo-chat-priv.png" %}' alt="" width="25%"></div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto"> Construida con</div>
+                                <div class="tecnologias-construccion">
+                                    <img class="imagane-icon-habilidades html"
+                                        src='{% static "imagenes/space/ic-html.png" %}' >
+                                    <img class="imagane-icon-habilidades bootstrap"
+                                        src='{% static "imagenes/space/ic-js.png" %}' >
+                                    <img class="imagane-icon-habilidades css"
+                                        src='{% static "imagenes/space/ic-css.png" %}'>
+                                </div>
+                                <div class="tecnologias-construccion">
+                                    <img class="imagane-icon-habilidades html"
+                                        src='{% static "imagenes/space/socketio.png" %}' >
+                                    <img class="imagane-icon-habilidades bootstrap"
+                                        src='{% static "imagenes/space/nodejs.png" %}' >
+                                    
+                                </div>
+                            </div>
+                            <div class="conteiner-main-proyecto links">
+                                <div class="titulo-proyecto">Links</div>
+                                <div class="conteiner-button-proyecto">
+                                    <a class="button-proyecto" href="">Link a github</a>
+                                    <a class="button-proyecto" href="">Link a la web</a>
+                                </div>
+                            </div>
 
+                        </div>
+                    </div>
                 </div>
             </div>
-            <img class="prev-movil button-carrosel" src='{% static "imagenes/space/abajo.png" %}' height="25vh" ></img>
+            <img class="next-movil button-carrosel" src='{% static "imagenes/space/abajo.png" %}' height="25vh" ></img>
 
         </section>
 
