--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -228,8 +228,8 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/Criptoword-front">Link a github</a>
-                                    <a class="button-proyecto" href="http://criptoword.com.ar">Link a la web</a>
+                                    <a class="button-proyecto a" href="https://github.com/horacio-a/Criptoword-front">Link a github</a>
+                                    <a class="button-proyecto a" href="http://criptoword.com.ar">Link a la web</a>
                                 </div>
                             </div>
                         </div>
