--- a/porfolio/staticfiles/css/index.css
+++ b/porfolio/staticfiles/css/index.css
@@ -1,4 +1,3 @@
-
 @media (min-width: 0px) and (max-width: 900px) {
     .conteiner-nombre p {
         color: #85bb65;
@@ -78,6 +77,7 @@
         justify-content: center;
         align-items: center;
     }
+
     .itemOpciones {
         width: 100%;
         height: 17.5%;
@@ -331,6 +331,7 @@
         min-height: 85%;
         height: auto;
     }
+
     .main-proyecto-pc {
         display: none;
     }
@@ -362,7 +363,7 @@
 
         100% {
             transform: translate(-100%);
-            border-radius: 15px 0px 0px 15px ;
+            border-radius: 15px 0px 0px 15px;
         }
 
     }
@@ -375,18 +376,18 @@
         0% {
             transform: translate(50%);
             width: 17.51vh;
-            border-radius: 15px 15px 15px 15px ;
+            border-radius: 15px 15px 15px 15px;
         }
 
         100% {
             transform: translate(92.5%);
             width: 18.5vh;
-            border-radius: 0px 15px 15px 0px ;
+            border-radius: 0px 15px 15px 0px;
         }
 
     }
 
-    .bloque-proyecto img{
+    .bloque-proyecto img {
         border-radius: 15px;
     }
 
@@ -407,7 +408,7 @@
     }
 
 
-    
+
     #icon-bonhomia {
         position: relative;
         transform: translate(-50%);
@@ -430,7 +431,7 @@
         transform: translate(50%);
         width: 17.51vh;
         height: 100%;
-        border-radius: 15px 15px 15px 15px ;
+        border-radius: 15px 15px 15px 15px;
         background-color: #85bb65;
     }
 
@@ -520,7 +521,7 @@
     }
 
     .conteiner-habilidades {
-        border-radius: 1vw ;
+        border-radius: 1vw;
         width: 90%;
         height: 100%;
         background-color: #EEEBDD;
@@ -599,21 +600,22 @@
         height: 100%;
     }
 
-    .boton-movil-contacto{
+    .boton-movil-contacto {
         border: none;
         width: 45%;
-        height: 5vh ;
+        height: 5vh;
         background-color: #1B1717;
         color: #EEEBDD;
         border-radius: 1vh;
 
     }
-    .conteiner-movil-boton{
-    width: 100%;
-    height: 100%;
+
+    .conteiner-movil-boton {
+        width: 100%;
+        height: 100%;
     }
 
-    .texto-form-movil{
+    .texto-form-movil {
         background-color: #1B1717;
         color: #EEEBDD;
         border-radius: 1vh;
@@ -635,7 +637,7 @@
         padding: 10px;
     }
 
-    #main-contacto-movil form{
+    #main-contacto-movil form {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -643,6 +645,7 @@
         width: 100%;
         height: 75%;
     }
+
 
     /* -----------------------------------  fin main-contacto -------------------------------------------- */
 
@@ -1267,6 +1270,42 @@
         align-items: center;
     }
 
+
+    .form-pc{
+        font-family: Cinzel;
+        font-size: 100%;
+        background-color: #1B1717;
+        color: #EEEBDD;
+        border-radius: 1vh;
+        border: none;
+        width: 75%;
+        height: 7.5%;
+        margin-bottom: 1vh;
+        padding: 10px;
+    }
+    .form-pc::placeholder{
+        font-family: Cinzel;
+        font-size: 100%;
+        color: #EEEBDD;
+    }
+
+    .contactoBtn{
+        cursor: pointer;
+        border-radius: 1vh;
+        color: #EEEBDD;
+        width: 35%;
+        height: 7.5%;
+        background-color: #1B1717;
+    }
+
+    .contactoBtn:hover{
+        cursor: pointer;
+        border-radius: 1vh;
+        color: #1B1717;
+        width: 35%;
+        height: 7.5%;
+        background-color: #EEEBDD;
+    }
 
     .container {
         display: flex;
